another alignment fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -708,8 +708,11 @@ h3 {
   @extend .position-absolute;
   width: 80px;
   margin-top: 0.5rem;
-  margin-left: -12.7rem;
+  margin-left: -5.7rem;
 
+  @media (min-width: 410px) {
+    margin-left: -12.7rem;
+  }
 }
 
 .highlightText-Circle ~ h2 {
